Bug 59048 - Crash when undoing a conversion text to table
Summary: Crash when undoing a conversion text to table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-05 08:39 UTC by Jean-Baptiste Faure
Modified: 2014-12-28 08:07 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc with particular text (10.53 KB, application/vnd.oasis.opendocument.text)
2013-01-05 08:39 UTC, Jean-Baptiste Faure
Details
bt + console logs on 4.0 (22.98 KB, text/plain)
2013-01-06 13:35 UTC, Julien Nabet
Details
valgrind log (9.30 KB, text/x-log)
2013-08-26 13:30 UTC, Caolán McNamara
Details
test file that crashes libreoffice on convert text to table undo (72.50 KB, application/msword)
2014-11-16 13:20 UTC, Moritz Moeller-Herrmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-01-05 08:39:59 UTC
Created attachment 72531 [details]
bugdoc with particular text

Steps to reproduce:
1/ open the attached text document
2/ select the text
3/ menu Table > Convert > Text to table > OK
4/ click on undo button ==> CRASH (segmentation fault)

Note 1: LO does not crash if I do the same with only a text like:
A b
c d
e f
g h
So the crash has something to do with the text itself.

Note2: my bugdoc has been anonymized but the original file crashes LO too.

Found with Version 4.0.0.0.beta2+ (Build ID: 235aaeb596c3701373889535f8fd8e29c92d333) build under Ubuntu 12.04 x86-64

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2013-01-05 08:48:36 UTC
No crash with Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0)
So will do a complete build (make clean && make dev-install) before to set status to NEW.

Best regards. JBF
Comment 2 Rainer Bielefeld Retired 2013-01-05 09:05:55 UTC
NOT reproducible with 
* parallel installation of  "LOdev  4.0.0.0.beta2  - GERMAN UI / German Locale [Build ID: 4104d660979c57e1160b5135634f732918460a0)]"  {tinderbox: @6, pull time 2012-12-20} on German WIN7 Home Premium (64bit) with separate /4 User Profile for Master Branch.
* server installation of "4.1.0.0.alpha0+ (Build ID: 6a393297ce6d99bbc4edefbf01ab9c5c6f0eff8) TinderBox: Win-x86@6, Branch:master, Time: 2013-01-04_01:06:01  - ENGLISH UI / German Locale  on German WIN7 Home Premium (64bit) with LO41 Masters User Profile

Branch only or Linux only?
Comment 3 Rainer Bielefeld Retired 2013-01-05 09:19:59 UTC
NOT reproducible with server installation of "LOdev  4.0.0.0.beta2+  - ENGLISH UI / German Locale  [Build ID: 6738ae52bd075dc6478dedfeddc60d1c25cffcb)]"  {tinderbox: Win-x86@6, pull time 2013-01-04 23:41:48} on German WIN7 Home Premium (64bit) with own separate User Profile

So Linux only?
Comment 4 Jean-Baptiste Faure 2013-01-05 10:16:40 UTC
(In reply to comment #3)
> NOT reproducible with server installation of "LOdev  4.0.0.0.beta2+  -
> ENGLISH UI / German Locale  [Build ID:
> 6738ae52bd075dc6478dedfeddc60d1c25cffcb)]"  {tinderbox: Win-x86@6, pull time
> 2013-01-04 23:41:48} on German WIN7 Home Premium (64bit) with own separate
> User Profile
> 
> So Linux only?

Perhaps, or only an artifact of partial build. ATM complete build fails as for tinderboxes Linux-x86_10-Release-Configuration and Linux-x86_64_11-Release-Configuration
http://tinderbox.libreoffice.org/libreoffice-4-0/status.html

Best regards. JBF
Comment 5 Jean-Baptiste Faure 2013-01-05 11:38:48 UTC
I reproduce the crash with Version 4.0.0.0.beta2+ (Build ID: 1d7287f8d7984eae98a577f60a8bc0a740fc5e9) which corresponds to the last daily build for Linux-x86_10-Release-Configuration tinderbox.

So seems to be Linux only and perhaps x86-64 only.

Best regards. JBF
Comment 6 Julien Nabet 2013-01-06 13:35:27 UTC
Created attachment 72587 [details]
bt + console logs on 4.0

On pc Debian x86-64 with 4.0 sources updated today, I reproduced the problem.
I attached bt + console logs.

I also reproduced this with 3.6 sources but not with master sources updated today.
Comment 7 Caolán McNamara 2013-08-26 13:30:24 UTC
Created attachment 84650 [details]
valgrind log
Comment 8 Caolán McNamara 2013-08-26 13:31:37 UTC
crashes on some versions and not in others, but valgrind reports the same problem all the way back to the oldest bibisect 3.5
Comment 9 Caolán McNamara 2013-08-26 13:43:52 UTC
https://gerrit.libreoffice.org/#/c/5634/ is my stab at this
Comment 10 Michael Stahl 2013-08-26 20:31:48 UTC
fixed on master
Comment 11 Commit Notification 2013-08-26 20:40:32 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=34f09dadd99a15aaad7fc8b982e01d6ec764c74c

Resolves: fdo#59048 crash on text-to-table undo



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2013-08-26 20:50:54 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2b27404184688cc5bdfd68ed15da5159950a318d&h=libreoffice-4-1

Resolves: fdo#59048 crash on text-to-table undo


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Moritz Moeller-Herrmann 2014-11-16 13:18:52 UTC
Libreoffice 4.3.3 still crashes on undo of a convert text to table action. If you change the first list in the attached document to a table and undo, libreoffice crashes.

Maybe this is linked to the track changes?
Comment 14 Moritz Moeller-Herrmann 2014-11-16 13:20:38 UTC
Created attachment 109554 [details]
test file that crashes libreoffice on convert text to table undo
Comment 15 Caolán McNamara 2014-11-17 11:08:26 UTC
Please don't reopen year+ old bugs assigned to a developer when a similar bug appears. The original developer might not even be involved with the project anymore and so the bug report will get lost, please file a new one.
Comment 16 Moritz Moeller-Herrmann 2014-11-19 21:02:17 UTC
WEll, I reported the bug, I am actually using Microsoft OFfice and SOftmaker office, because libreoffice is too crashy. I also try to avoid duplicates - why do you not simply reassign the bug report to someone else? Do you want me to reenter all data reupload the test file? Not seriously.
Comment 17 David Tardon 2014-12-28 08:07:56 UTC
(In reply to Moritz Moeller-Herrmann from comment #16)
> I also try to avoid duplicates -

Does the original reproducer still cause crash? If not, then your problem _is not_ the same bug and you are doing the exact opposite of avoiding a duplicate--mixing two different bugs together.

> Do you want
> me to reenter all data reupload the test file? Not seriously.

Yes, seriously.