Fix fdo#59048

Fixes a crash that occured when undoing a text to table operation.

As far as I can tell, the crash occures only when the resulting table
contains empty cells. Somewhere, the SwTableBox objects corresponding
to these (or some of them, at least) are getting deleted before the
time is right. Therefore, I've added a check before deleting, to make
sure there is text in that cell.

I am not entirely sure on the correctness of the check, and the fix
migth cause memory leakage somewhere, but it is still better than
crashing.

Change-Id: I376881a94986d2c06234bbff2ba9e55fb0669b0d